[fix] repair footer overflow issues

--- a/src/styles/sass/footer.sass
+++ b/src/styles/sass/footer.sass
@@ -2,7 +2,7 @@
 
 .footer
   align-items: center
-  background-color: $color-teal-darker
+  background-color: $color-teal-darkest
   color: $color-gray
   display: flex
   font-weight: 100
@@ -16,7 +16,7 @@
     letter-spacing: .1rem
     // margin-bottom: 1px
     // padding-bottom: -5px
-    padding: 2.2rem
+    padding: 1.4rem
     word-spacing: .2rem
 
   a
