--- a/src/styles/sass/layout.sass
+++ b/src/styles/sass/layout.sass
@@ -7,6 +7,7 @@
 .container
   display: flex
   flex-flow: row wrap
+  height: 100vh
 
 .map
   flex: 3
